# app/api/routes/maintenances.py
@@ -71,19 +71,6 @@ async def update_maintenance(
         db, maintenance_id, data, current_user, files, initial_photo_action
     )
 
-@router.patch("/{maintenance_id}/pause", response_model=TicketItemResponse)
-async def pause(maintenance_id: UUID7, 
-          payload: str = Form(...),
-          initial_photo_action: str = Form("keep"),
-          initial_photo_file: Optional[UploadFile] = File(None), # Is the file per se. The column photo_path is the path
-          db: Session = Depends(get_db),
-          current_user = Depends(get_current_user)):
-    data = PauseRequest.model_validate_json(payload)
-    files = {"initial_photo_file": initial_photo_file}
-    return await maintenance_svc.pause_and_update(
-        db, maintenance_id, data, current_user, files, initial_photo_action
-    )
-
 @router.delete("/{maintenance_id}", status_code=204)
 def del_maintenance(maintenance_id: UUID7, 
                db: Session = Depends(get_db), 
